# openbugs

./: AUTHORS  COPYING  ChangeLog  Makefile.in  NEWS  README  configure  configure.ac
autom4te.cache/: output.0  traces.0  traces.1
doc/: OpenBUGS.1  testscript.txt
doc/Developer/: BRugsH.html  BlueDiamonds.html  CBugs.html  Compiling.html  Distributing.html  Documenting.html  Guestbook.html  Initializing.html  LibOpenBUGS.html  Linking.html  Make.html  Manual.html  MultiBUGS.html  Randnum.html  SamplingAlgorithms.html  Test.html  Tools.html  WritingBUGSExtensions.html
doc/Examples/: Abbey.html  Air.html  Airdata.html  Airinits.html  Airinits1.html  Airinits1.txt  Airmodel.html  Airmodel.txt  Aligators.html  Aligatorsdata.html  Aligatorsdata.txt  Aligatorsinits.html  Aligatorsinits.txt  Aligatorsinits1.html  Aligatorsinits1.txt  Aligatorsmodel.html  Aligatorsmodel.txt  Asia.html  Asiadata.html  Asiadata.txt  Asiainits.html  Asiainits1.html  Asiainits1.txt  Asiamodel.html  Asiamodel.txt  Beetles.html  Beetlesdata.html  Beetlesdata.txt  Beetlesinits.html  Beetlesinits1.html  Beetlesinits1.txt  Beetlesmodel.html  Beetlesmodel.txt  BiRats.html  BiRatsdata.html  BiRatsdata.txt  BiRatsinits.html  BiRatsinits.txt  BiRatsinits1.html  BiRatsinits1.txt  (+497 more)
doc/Manuals/: AttributesMenu.html  CompoundDocuments.html  Contents.html  DoodleBUGS.html  EditMenu.html  ExamplesMenu.html  FileMenu.html  GNU-Licence.html  HelpMenu.html  InferenceMenu.html  InfoMenu.html  Introduction.html  Manual.html  ManualsMenu.html  Tricks.html  (+9 more)
src/: Makefile.am  Makefile.in  OpenBUGS.h  OpenBUGSCli.c
(+264 files in other folders)
